# Bitget-get-future-kline

./: LICENSE  README.md  cli.py  pyproject.toml
bitget_fetcher/: __init__.py  fetcher.py
